@@ -17,7 +17,7 @@ import com.hcmus.mentor.backend.repository.GroupRepository;
 import com.hcmus.mentor.backend.repository.ReminderRepository;
 import com.hcmus.mentor.backend.repository.TaskRepository;
 import com.hcmus.mentor.backend.repository.UserRepository;
-import com.hcmus.mentor.backend.security.UserPrincipal;
+import com.hcmus.mentor.backend.security.principal.userdetails.CustomerUserDetails;
 import com.hcmus.mentor.backend.util.DateUtils;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -78,33 +78,29 @@ public class TaskServiceImpl implements IRemindableService {
             }
         }
 
-        List<String> userIds =
-                request.getUserIds().contains("*")
-                        ? groupService.findAllMenteeIdsGroup(request.getGroupId())
-                        : request.getUserIds();
+        List<String> userIds = request.getUserIds().contains("*")
+                ? groupService.findAllMenteeIdsGroup(request.getGroupId())
+                : request.getUserIds();
         Optional<User> assigner = userRepository.findByEmail(emailUser);
-        List<AssigneeDto> assigneeIds =
-                userIds.stream().map(Task::newTask).collect(Collectors.toList());
-        Task task =
-                Task.builder()
-                        .title(request.getTitle())
-                        .description(request.getDescription())
-                        .deadline(request.getDeadline())
-                        .groupId(request.getGroupId())
-                        .assignerId(assigner.map(User::getId).orElse(null))
-                        .parentTask(request.getParentTask())
-                        .assigneeIds(assigneeIds)
-                        .build();
+        List<AssigneeDto> assigneeIds = userIds.stream().map(Task::newTask).toList();
+        Task task = Task.builder()
+                .title(request.getTitle())
+                .description(request.getDescription())
+                .deadline(request.getDeadline())
+                .groupId(request.getGroupId())
+                .assignerId(assigner.map(User::getId).orElse(null))
+                .parentTask(request.getParentTask())
+                .assigneeIds(assigneeIds)
+                .build();
         taskRepository.save(task);
 
-        Message message =
-                Message.builder()
-                        .senderId(task.getAssignerId())
-                        .groupId(task.getGroupId())
-                        .createdDate(task.getCreatedDate())
-                        .type(Message.Type.TASK)
-                        .taskId(task.getId())
-                        .build();
+        Message message = Message.builder()
+                .senderId(task.getAssignerId())
+                .groupId(task.getGroupId())
+                .createdDate(task.getCreatedDate())
+                .type(Message.Type.TASK)
+                .taskId(task.getId())
+                .build();
         messageService.saveMessage(message);
 
         MessageDetailResponse response =
@@ -129,7 +125,7 @@ public class TaskServiceImpl implements IRemindableService {
                 tasks.stream()
                         .map(task -> generateTaskDetailFromTask(emailUser, task))
                         .sorted(Comparator.comparing(TaskDetailResponse::getCreatedDate).reversed())
-                        .collect(Collectors.toList());
+                        .toList();
         return new TaskReturnService(SUCCESS, "", taskDetailResponses);
     }
 
@@ -148,7 +144,7 @@ public class TaskServiceImpl implements IRemindableService {
         return new TaskReturnService(SUCCESS, "", taskDetailResponses);
     }
 
-    public TaskReturnService deleteTask(UserPrincipal user, String id) {
+    public TaskReturnService deleteTask(CustomerUserDetails user, String id) {
         Optional<Task> taskOptional = taskRepository.findById(id);
         if (!taskOptional.isPresent()) {
             return new TaskReturnService(NOT_FOUND, "Not found task", null);
@@ -269,7 +265,7 @@ public class TaskServiceImpl implements IRemindableService {
 
         Map<String, TaskStatus> statuses = task.getAssigneeIds().stream()
                 .collect(Collectors.toMap(AssigneeDto::getUserId, AssigneeDto::getStatus, (s1, s2) -> s2));
-        
+
         return assignees.stream()
                 .map(assignee -> {
                     TaskStatus status = statuses.getOrDefault(assignee.getId(), null);
@@ -338,7 +334,7 @@ public class TaskServiceImpl implements IRemindableService {
         return new TaskReturnService(SUCCESS, "", task);
     }
 
-    public TaskReturnService updateTask(UserPrincipal user, String id, UpdateTaskRequest request) {
+    public TaskReturnService updateTask(CustomerUserDetails user, String id, UpdateTaskRequest request) {
         Optional<Task> taskOptional = taskRepository.findById(id);
         if (!taskOptional.isPresent()) {
             return new TaskReturnService(NOT_FOUND, "Not found task", null);
@@ -374,7 +370,7 @@ public class TaskServiceImpl implements IRemindableService {
     public List<TaskResponse> getMostRecentTasks(String userId) {
         List<String> groupIds = groupService.getAllActiveOwnGroups(userId).stream()
                 .map(Group::getId)
-                .collect(Collectors.toList());
+                .toList();
         List<Task> tasks =
                 taskRepository
                         .findAllByGroupIdInAndAssigneeIdsUserIdInAndDeadlineGreaterThan(
@@ -384,24 +380,22 @@ public class TaskServiceImpl implements IRemindableService {
                                 PageRequest.of(0, 5, Sort.by("deadline").descending()))
                         .getContent();
         return tasks.stream()
-                .map(
-                        task -> {
-                            Group group = groupRepository.findById(task.getGroupId()).orElse(null);
-                            User assigner = userRepository.findById(task.getAssignerId()).orElse(null);
-                            AssigneeDto assignee =
-                                    task.getAssigneeIds().stream()
-                                            .filter(a -> a.getUserId().equals(userId))
-                                            .findFirst()
-                                            .orElse(null);
-                            return TaskResponse.from(task, assigner, assignee, group);
-                        })
-                .collect(Collectors.toList());
+                .map(task -> {
+                    Group group = groupRepository.findById(task.getGroupId()).orElse(null);
+                    User assigner = userRepository.findById(task.getAssignerId()).orElse(null);
+                    AssigneeDto assignee = task.getAssigneeIds().stream()
+                            .filter(a -> a.getUserId().equals(userId))
+                            .findFirst()
+                            .orElse(null);
+                    return TaskResponse.from(task, assigner, assignee, group);
+                })
+                .toList();
     }
 
     public List<Task> getAllOwnTasks(String userId) {
         List<String> joinedGroupIds = groupService.getAllActiveOwnGroups(userId).stream()
                 .map(Group::getId)
-                .collect(Collectors.toList());
+                .toList();
 
         return taskRepository.findAllByGroupIdInAndAssigneeIdsUserIdIn(
                 joinedGroupIds, Arrays.asList("*", userId));
@@ -417,16 +411,15 @@ public class TaskServiceImpl implements IRemindableService {
         List<String> joinedGroupIds =
                 groupService.getAllActiveOwnGroups(userId).stream()
                         .map(Group::getId)
-                        .collect(Collectors.toList());
-        MatchOperation match =
-                Aggregation.match(
-                        Criteria.where("groupId")
-                                .in(joinedGroupIds)
-                                .and("assigneeIds.userId")
-                                .in(Arrays.asList("*", userId))
-                                .and("deadline")
-                                .gte(startTime)
-                                .lte(endTime));
+                        .toList();
+        MatchOperation match = Aggregation.match(
+                Criteria.where("groupId")
+                        .in(joinedGroupIds)
+                        .and("assigneeIds.userId")
+                        .in(Arrays.asList("*", userId))
+                        .and("deadline")
+                        .gte(startTime)
+                        .lte(endTime));
         Aggregation aggregation = Aggregation.newAggregation(match);
         return mongoTemplate.aggregate(aggregation, "task", Task.class).getMappedResults();
     }
@@ -453,11 +446,10 @@ public class TaskServiceImpl implements IRemindableService {
 
         List<TaskResponse> assignedTask = getOwnAssignedTasks(groupId, userId);
         List<TaskResponse> assignedByMe = getAssignedByMeTasks(groupId, userId);
-        List<TaskResponse> ownTasks =
-                Stream.concat(assignedTask.stream(), assignedByMe.stream())
-                        .filter(distinctById(TaskResponse::getId))
-                        .sorted(Comparator.comparing(TaskResponse::getCreatedDate).reversed())
-                        .collect(Collectors.toList());
+        List<TaskResponse> ownTasks = Stream.concat(assignedTask.stream(), assignedByMe.stream())
+                .filter(distinctById(TaskResponse::getId))
+                .sorted(Comparator.comparing(TaskResponse::getCreatedDate).reversed())
+                .toList();
         return new TaskReturnService(SUCCESS, "", ownTasks);
     }
 
@@ -476,17 +468,15 @@ public class TaskServiceImpl implements IRemindableService {
                 taskRepository.findAllByGroupIdAndAssigneeIdsUserIdInOrderByCreatedDateDesc(
                         groupId, Arrays.asList("*", userId));
         return tasks.stream()
-                .map(
-                        task -> {
-                            User assigner = userRepository.findById(task.getAssignerId()).orElse(null);
-                            AssigneeDto assignee =
-                                    task.getAssigneeIds().stream()
-                                            .filter(a -> a.getUserId().equals(userId))
-                                            .findFirst()
-                                            .orElse(null);
-                            return TaskResponse.from(task, assigner, assignee, groupWrapper.get());
-                        })
-                .collect(Collectors.toList());
+                .map(task -> {
+                    User assigner = userRepository.findById(task.getAssignerId()).orElse(null);
+                    AssigneeDto assignee = task.getAssigneeIds().stream()
+                            .filter(a -> a.getUserId().equals(userId))
+                            .findFirst()
+                            .orElse(null);
+                    return TaskResponse.from(task, assigner, assignee, groupWrapper.get());
+                })
+                .toList();
     }
 
     public TaskReturnService wrapOwnAssignedTasks(String groupId, String userId) {
@@ -516,7 +506,7 @@ public class TaskServiceImpl implements IRemindableService {
                 taskRepository.findAllByGroupIdAndAssignerIdOrderByCreatedDateDesc(groupId, userId);
         return tasks.stream()
                 .map(task -> TaskResponse.from(task, assigner, null, groupWrapper.get()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public TaskReturnService wrapAssignedByMeTasks(String groupId, String userId) {
@@ -551,32 +541,6 @@ public class TaskServiceImpl implements IRemindableService {
         reminder.setSubject("Bạn có 1 công việc sắp tới hạn");
         reminderRepository.save(reminder);
     }
-
-    //    @Override
-    //    public List<Reminder> findReminderToday() {
-    //        Calendar calendar = Calendar.getInstance();
-    //        calendar.setTime(new Date());
-    //        calendar.add(Calendar.DAY_OF_MONTH, 1);
-    //        Date tomorrow = calendar.getTime();
-    //        calendar.add(Calendar.DAY_OF_MONTH, 1);
-    //        Date afterTomorrow = calendar.getTime();
-    //
-    //        List<Task> tasks = taskRepository.findAllByDeadlineBetween(tomorrow, afterTomorrow);
-    //        List<Reminder> reminders = new ArrayList<>();
-    //        for(Task task: tasks){
-    //            Reminder reminder = task.toReminder();
-    //            List<String> emailUsers = new ArrayList<>();
-    //            for(Task.Assignee assignee: task.getAssigneeIds()){
-    //                Optional<User> userOptional = userRepository.findById(assignee.getUserId());
-    //                if(userOptional.isPresent()){
-    //                    emailUsers.add(userOptional.get().getEmail());
-    //                }
-    //            }
-    //            reminder.setRecipients(emailUsers);
-    //            reminders.add(reminder);
-    //        }
-    //        return reminders;
-    //    }
 
     @Getter
     @Setter
