@@ -306,7 +306,7 @@ public class MessageServiceImpl implements MessageService {
                 messages.stream()
                         .flatMap(response -> response.getReactions().stream())
                         .map(ReactionDto::getUserId)
-                        .collect(Collectors.toList());
+                        .toList();
         Map<String, User> reactors =
                 userRepository.findByIdIn(userIds).stream()
                         .collect(Collectors.toMap(User::getId, user -> user, (u1, u2) -> u2));
@@ -316,7 +316,7 @@ public class MessageServiceImpl implements MessageService {
                 .filter(message -> !message.isDeletedAttach())
                 .map(message -> fulfillReactions(message, reactors))
                 .map(message -> MessageDetailResponse.totalReaction(message, viewerId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
